--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,7 @@
 </main>
 
 <script>
-  const API_BASE = 'http://localhost:3000/api'; // change when deployed
+  const API_BASE = 'api'; // change when deployed
 
   // Nav handling
   document.querySelectorAll('nav a').forEach(a => {
@@ -535,3 +535,4 @@
 </script>
 </body>
 </html>
+
